--- a/docker_test.yaml
+++ b/docker_test.yaml
@@ -27,4 +27,4 @@ commandTests:
       - -c
       - |
         trivy --version
-    expectedOutput: [".*Version:.*"]
+    expectedOutput: [".*Version.*"]
